Fixed height overflow bug

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@ body {
     'navbar currentsummary weekforecast'
     'navbar todayforecast weekforecast'
     'navbar airconditions weekforecast';
-  grid-template-columns: 0.25fr 3fr 2fr;
+  grid-template-columns: 0.25fr 2fr 1fr;
 }
 
 .search-bar {
@@ -46,7 +46,7 @@ body {
   padding: 1.25rem;
   display: grid;
 
-  grid-template-rows: 1.5fr 1fr 1fr 1fr 1fr 4fr;
+  grid-template-rows: 1.5fr 1fr 1fr 1fr 1fr 3fr;
 }
 
 .nav-icon,
@@ -55,15 +55,10 @@ body {
   height: auto;
 }
 
-.nav-icon {
-  padding-bottom: 0.3rem;
-}
-
 .nav-icon-container {
   display: grid;
   place-items: center;
   color: rgb(121, 127, 138);
-  margin-bottom: 1.5rem;
 }
 
 .current-weather-summary-container {
